# Luma

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.musl  LICENCE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
RAG-client-py/: .env.example  README.md  chat_rag_pdf.py  ingest_pdf_to_vdb.py  pyproject.toml  test_luma.py
RAG-client-py/examples/: chat_rag_pdf.py  getting_started.py  ingest_pdf_to_vdb.py  state_chat_memory.py  subapi_quickstart.py
RAG-client-py/src/luma/: __init__.py  client.py  config.py  errors.py  langchain.py  models.py  rag.py  types.py
benches/: sqlite_bench.rs  vector_bench.rs
codex/: AGENTS.md
docs/: API.md  ARCHITECTURE.md  BENCH.md  BENCHMARKS.md  CONFIG.md  DEMO.md  PROD_READINESS.md  SDK_PYTHON.md  openapi.yaml
scripts/: demo.ps1  sse_1000.ps1  write_load.ps1
src/: cli.rs  config.rs  diskann.rs  lib.rs  main.rs  server.rs
src/api/: auth.rs  auth_store.rs  mod.rs  routes_auth.rs  routes_docs.rs  routes_search.rs  routes_state.rs  routes_vector.rs
src/config/: resolve.rs
src/engine/: adapters.rs  meta.rs  mod.rs  persist.rs  traits.rs
src/search/: engine.rs  grouping.rs  mod.rs  storage.rs  types.rs
src/sqlite/: mod.rs
src/vector/: index.rs  ivf.rs  mod.rs  persist.rs  q8.rs  simd.rs
tests/: auth_ttl_sse_gap.rs  contract.rs  http_state_vector.rs  integration.rs  persistence.rs  sqlite_api.rs  sse.rs  test_grouping.rs  unit.rs  vector_ivf.rs  vector_persist.rs  vector_roundtrip_matrix.rs
tests/contract/: test_api_schema.rs
ui/: index.html
(+9 files in other folders)
