[project]
name = "luma-vdb"
version = "0.2.2"
description = "Luma: High-performance RAG SDK powered by RustKissVDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "pymupdf>=1.26.7",
    "rich>=14.3.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.26.7",
]
langchain = [
    "langchain-core>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
